<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judul_aplikasi_kalkulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul_aplikasi_kalkulator"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/masukan_dua_angka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukan_dua_angka"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/judul_aplikasi_kalkulator"/>

    <EditText
        android:id="@+id/angka_pertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/masukan_angka_pertama"
        android:textSize="20sp"
        android:layout_below="@+id/masukan_dua_angka"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/angka_kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/masukan_angka_kedua"
        android:textSize="20sp"
        android:layout_below="@+id/angka_pertama"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/tambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah"
        android:layout_below="@+id/angka_kedua"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/kurang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kurang"
        android:layout_alignBaseline="@+id/tambah"
        android:layout_alignBottom="@+id/tambah"
        android:layout_toEndOf="@+id/tambah"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/kali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kali"
        android:layout_alignBaseline="@+id/bagi"
        android:layout_alignBottom="@+id/bagi"
        android:layout_toStartOf="@+id/bagi"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/bagi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bagi"
        android:layout_below="@+id/angka_kedua"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/bersihkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bersihkan"
        android:layout_below="@+id/tambah"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tulisan_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_below="@+id/bersihkan"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />



    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nol"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_below="@+id/tulisan_hasil"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />


</RelativeLayout>